MEC Production/MEC Production/src/objects/Warehouse__c.object
<CustomObject>
    <fields>
        <fullName>Distribution_Ch__c</fullName>
        <label>Distribution Ch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Org__c</fullName>
        <label>Sale Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <externalId>true</externalId>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Warehouse</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>Sale_Org__c</columns>
        <columns>Site__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>